--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center space-x-2">
-                    <img src="images/logo.svg" alt="Organic Soap Logo" class="h-10">
+                    <img src="logo.jfif" alt="Organic Soap Logo" class="h-10">
                     <span class="font-bold text-xl">Organic Soap</span>
                 </div>
                 <div class="hidden md:flex space-x-8">
@@ -353,7 +353,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
                 <div>
                     <div class="flex items-center space-x-2 mb-4">
-                        <img src="images/logo-white.svg" alt="Organic Soap Logo" class="h-8">
+                        <img src="logo.jfif" alt="Organic Soap Logo" class="h-8">
                         <span class="font-bold text-xl">Organic Soap</span>
                     </div>
                     <p class="text-gray-400 mb-4">Handcrafted organic soaps made with love and care for your skin and the environment.</p>
